<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MozStumbler</string>
    <string name="action_about">About MozStumbler</string>
    <string name="action_preferences">Settings</string>
    <string name="action_upload_observations">Upload observations</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="view_map">Test Mozilla Location Service</string>
    <string name="service_name">Mozilla Stumbler</string>
    <string name="activity_recognition_service">Mozilla Stumbler Activity Recognition Intent Service</string>
    <string name="wifi_access_points">Wi-Fi Access Points Scanned: %1$d</string>
    <string name="wifi_disabled">0 (Wi-Fi disabled)</string>
    <string name="visible_wifi_access_points">Wi-Fi Access Points Visible: %1$s</string>
    <string name="wifi_info">WiFi: %1$d Visible, %2$d Scanned</string>
    <string name="cells_scanned">Cells Scanned: %1$d</string>
    <string name="cells_visible">Cells Visible: %1$d</string>
    <string name="cells_info">Cells: %1$d Visible, %2$d Scanned</string>
    <string name="gps_satellites">GPS Satellites Used / Visible: %1$d/%2$d</string>
    <string name="num_used">%1d Used</string>
    <string name="num_visible">%1d Visible</string>
    <string name="last_location">Last Location: %1$s</string>
    <string name="coordinate">%1$.4f, %2$.4f</string>
    <string name="locations_scanned">Locations Scanned: %1$d</string>
    <string name="last_upload_time">Last Upload Time: %1$s</string>
    <string name="reports_sent">Reports Sent: %1$d</string>
    <string name="service_scanning">Scanning for Wi-Fi and Cellular networks</string>

    <string name="enter_nickname">Enter Nickname (optional)</string>
    <string name="enter_nickname_title">Nickname: </string>
    <string name="enter_nickname_longtext">Your nickname will appear on the leaderboard.</string>

    <string name="power_saving_mode">Power saving mode</string>
    <string name="power_saving_mode_longtext">When enabled, stumbling will only occur when you are moving.</string>

    <string name="update_title">Download MozStumbler Update?</string>
    <string name="update_message">Installed version: %1$s\nLatest version: %2$s</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>

    <string name="location_not_found">Location not found</string>
    <string name="location_lookup_error">Location lookup error</string>

    <string name="gps_alert_msg">GPS is turned off. Do you want to go to settings and turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about_version">Version %1$s</string>
    <string name="about_openstreetmap">Map view tiles © OpenStreetMap contributors\nhttp://www.openstreetmap.org</string>
    <string name="about_mapbox_title">MapBox</string>
    <string name="about_mapbox">Learn more about our mapping provider…</string>
    <string name="about_more">More…</string>
    <string name="about_legal_aosp">Some iconography in this app is reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

    <string name="upload_observations_sent_title">Sent</string>
    <string name="upload_observations_last_upload_time_title">Last Upload Time:</string>
    <string name="upload_observations_observations_sent_title">Observations:</string>
    <string name="upload_observations_wifis_sent_title">Wi-Fi Access Points:</string>
    <string name="upload_observations_cells_sent_title">Cells:</string>
    <string name="upload_observations_in_queue_title">In queue</string>
    <string name="upload_observations_observations_queued_title">Observations:</string>
    <string name="upload_observations_wifis_queued_title">Wi-Fi Access Points:</string>
    <string name="upload_observations_cells_queued_title">Cells:</string>
    <string name="upload_observations_button">Upload</string>
    <string name="upload_observations_dialog_title">Upload observations</string>

    <string name="detected_activity">Detected Activity: %1$s</string>
    <string name="detected_activity_in_vehicle">Moving (in vehicle)</string>
    <string name="detected_activity_on_bicycle">Moving (on bicycle)</string>
    <string name="detected_activity_on_foot">Moving (on foot)</string>
    <string name="detected_activity_still">Still</string>
    <string name="detected_activity_tilting">Tilting</string>
    <string name="detected_activity_unknown">Unknown</string>

    <string name="upload_wifi_only_title">Upload only on WiFi</string>
    <string name="upload_wifi_only_summary">This option will reduce your data usage over the cellular network.</string>

    <string name="geofencing_off">Geofencing: off</string>
    <string name="geofencing_explain">Geofencing will be set at the next valid location obtained during scanning.</string>
    <string name="geofencing_desc">MozStumbler will pause scanning within 1 km of this lat/long position.</string>
    <string name="geofencing_on">Geofencing @ %1$.3f, %2$.3f</string>
    <string name="geofencing_enable">Geofence this location</string>

    <string name="wifi_scan_always_title">Always scan Wi-Fi</string>
    <string name="wifi_scan_always_summary">Scan APs even when Wi-Fi is turned off</string>

    <string name="refresh_map">Refresh location</string>

    <string name="title_activity_log">Log</string>

    <string name="action_settings">Settings</string>
    <string name="action_view_log">View Log</string>
    <string name="scroll_to_start">Scroll to Top</string>
    <string name="scroll_to_end">Scroll to End</string>
    <string name="upload_observations_data_size">Size (KB):</string>

    <!-- Mapbox SDK -->
    <string name="map_id">""</string>

    <!-- Tab bar -->
    <string name="map_title">Map</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="settings_title">Settings</string>
    <string name="technical_data_title">Technical Data</string>
    <string name="about_title">About</string>
    <string name="back_arrow">&lt;</string>

    <!-- Map -->
    <string name="today_overlay_title">Today</string>
    <string name="too_far_away_to_collect">"You're too far away!"</string>
    <string name="star_collected">Star collected! + 5 points</string>
    <string name="rainbow_collected">Rainbow collected! + 50 points</string>

    <!-- Leaderboard -->
    <string name="points_accumulated_title">Points Accumulated</string>
    <string name="your_stats_title">Your Stats</string>
    <string name="your_rank_title">Your Rank</string>
    <string name="your_rank_points_title">Points</string>
    <string name="top_ten_title">Top 10</string>

    <!-- Stumbling Data -->
    <string name="wifi_status_idle">Idle</string>
    <string name="wifi_status_active">Active</string>
    <string name="wifi_status_disabled">Disabled</string>

    <!-- Settings -->
    <string name="general_settings_title">General</string>
    <string name="developer_settings_title">Developer</string>
    <string name="send_feedback_title">Send Feedback</string>
    <string name="send_feedback_address">"contact@steamclock.com"</string>
    <string name="send_feedback_subject">MozStumbler Feedback</string>
    <string name="send_feedback_text">"Hello, I have some feedback for your app.\n\n"</string>

    <!-- Shared Preferences -->
    <string name="pref_nickname_key">nickname</string>
    <string name="pref_stumbler_power_key">stumbler_power</string>
    <string name="pref_wifi_upload_only_key">wifi_upload_only</string>
    <string name="pref_send_feedback_key">send_feedback</string>
    <string name="pref_about_stumbler_key">about_stumbler</string>
    <string name="pref_technical_data_key">technical_data_key</string>
    <string name="pref_reset_today_score_key">reset_today_score_key</string>
    <string name="pref_reset_overall_score_key">reset_overall_score_key</string>

    <string name="pref_nickname_title">Nickname</string>
    <string name="pref_stumbler_power_title">"Stumbler On/Off"</string>
    <string name="pref_wifi_upload_only_title">Upload only on WiFi</string>
    <string name="pref_send_feedback_title">Send feedback</string>
    <string name="pref_about_stumbler_title">About Stumbler</string>
    <string name="pref_technical_data_title">Technical data</string>
    <string name="pref_reset_today_score_title">"Reset today's score"</string>
    <string name="pref_reset_overall_score_title">Reset overall score</string>

    <!-- Developer Overlay -->
    <string name="developer_simulate_coin_reward_title">Coin Reward</string>
    <string name="developer_simulate_stumbler_off_title">Stumbler Off</string>

</resources>
