<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/pref_nickname"
        android:key="@string/pref_nickname_key"
        android:title="@string/pref_nickname_title"/>

    <SwitchPreference
        android:id="@+id/pref_stumbler_power"
        android:key="@string/pref_stumbler_power_key"
        android:title="@string/pref_stumbler_power_title"/>

    <SwitchPreference
        android:id="@+id/pref_wifi_upload_only"
        android:key="@string/pref_wifi_upload_only_key"
        android:title="@string/pref_wifi_upload_only_title"/>

    <Preference
        android:id="@+id/pref_send_feedback"
        android:key="@string/pref_send_feedback_key"
        android:title="@string/pref_send_feedback_title"/>

    <Preference
        android:id="@+id/pref_about_stumbler"
        android:key="@string/pref_about_stumbler_key"
        android:title="@string/pref_about_stumbler_title"/>

</PreferenceScreen>