<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences">

    <EditTextPreference
        android:key="nickname"
        android:title="@string/enter_nickname"
        android:summary="@string/enter_nickname_longtext" />

    <CheckBoxPreference
        android:key="wifi_only"
        android:title="@string/upload_wifi_only_title"
        android:summary="@string/upload_wifi_only_summary"
        android:defaultValue="false"/>


    <EditTextPreference
        android:key="geofence"
        android:title="@string/geofencing_title"
        android:summary="@string/geofencing_desc"
        android:defaultValue="0,0"/>

    <CheckBoxPreference
        android:key="geofence_switch"
        android:title="@string/geofencing_off"
        android:defaultValue="false" />

</PreferenceScreen>
