<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_view_leaderboard"
        android:icon="@drawable/ic_action_podium"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/view_leaderboard"/>
    <item
        android:id="@+id/action_test_mls"
        android:icon="@drawable/ic_action_location_searching"
        android:showAsAction="always"
        android:title="@string/view_map"/>
    <item
        android:id="@+id/action_preferences"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_preferences"/>
    <item
        android:id="@+id/action_upload_observations"
        android:showAsAction="never"
        android:title="@string/action_upload_observations"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/action_about"/>

</menu>
