<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/sent_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_observations_sent_title"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/last_upload_time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sent_header"
            android:layout_toLeftOf="@+id/last_upload_time_value"
            android:text="@string/upload_observations_last_upload_time_title" />

        <TextView
            android:id="@id/last_upload_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/last_upload_time_title"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4sp"
            android:minWidth="64dp"
            tools:text="16.02.14 13:07" />

        <TextView
            android:id="@+id/observations_sent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/last_upload_time_title"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_observations_sent_title" />

        <TextView
            android:id="@+id/observations_sent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/observations_sent_title"
            android:layout_alignBottom="@id/observations_sent_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="100" />

        <TextView
            android:id="@+id/cells_sent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/observations_sent_title"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_cells_sent_title" />

        <TextView
            android:id="@+id/cells_sent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/observations_sent_title"
            android:layout_alignBottom="@id/cells_sent_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="50" />

        <TextView
            android:id="@+id/wifis_sent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/cells_sent_title"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_wifis_sent_title" />

        <TextView
            android:id="@+id/wifis_sent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/wifis_sent_title"
            android:layout_alignBottom="@id/wifis_sent_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="500" />

        <TextView
            android:id="@+id/queued_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/wifis_sent_title"
            android:layout_marginTop="4dp"
            android:text="@string/upload_observations_in_queue_title"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/observations_queued_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/queued_header"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_observations_queued_title" />

        <TextView
            android:id="@+id/observations_queued_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/observations_queued_title"
            android:layout_alignBottom="@id/observations_queued_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="50" />

        <TextView
            android:id="@+id/cells_queued_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/observations_queued_title"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_cells_queued_title" />

        <TextView
            android:id="@+id/cells_queued_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cells_queued_title"
            android:layout_alignBottom="@id/cells_queued_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="10" />

        <TextView
            android:id="@+id/wifis_queued_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/cells_queued_title"
            android:layout_alignRight="@id/last_upload_time_title"
            android:text="@string/upload_observations_wifis_queued_title" />

        <TextView
            android:id="@+id/wifis_queued_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/wifis_queued_title"
            android:layout_alignBottom="@id/wifis_queued_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            tools:text="50" />

        <Button
            android:id="@+id/upload_observations_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifis_queued_title"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/upload_observations_button" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifis_queued_title"
            android:layout_alignLeft="@id/last_upload_time_value"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            tools:visibility="visible" />

    </RelativeLayout>
</ScrollView>
